# personal-assistant

./: .gitignore  .pylintrc  Cargo.toml  LICENSE  README.md  pyproject.toml
.history/: 2026-01-30_20-25-48.txt
.history/Week_5/Friday/: 2026-01-30_20-35-13.txt  2026-01-30_20-50-44.txt
.history/Week_6/Tuesday/: 2026-02-03_16-12-38.txt
chrome-extension/: background.js  blocked.html  blocked.js  manifest.json  popup.html  popup.js
data/: aidan.txt
server/: main.py  pyproject.toml
src/: aggregators.py  config.py  find_devices.py  jarvis_core.py  main.py  main.rs  main_minimal.py  observer.py  ollama.py  processors.py  test_mic.py  test_whisper.py  text.py  tts.py  voice.py
src/functions/: alarm.py  basic.py  files.py  functions.py  git_ops.py  google_ops.py  sandbox.py  scheduler.py  supabase_ops.py  website_blocker.py
tests/: conftest.py  test_basic.py  test_files.py  test_functions.py  test_git_ops.py  test_google_ops.py  test_ollama_options.py  test_sandbox.py
tools/: functions.txt  memory.txt  refresher.txt  system.txt
