[package]
name = "personal-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
kalosm = { version = "0.4.0", features = ["sound", "cuda"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1"

#[profile.release]
#opt-level = 3
#lto = true
#codegen-units = 1
#panic = 'abort'
#TODO find more optimizations