[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.2.1",
    "fuzzywuzzy[speedup]>=0.18.0",
    "loguru>=0.7.3",
    "pipecat-ai[local,local-smart-turn-v3,silero]>=0.0.98",
    "psutil>=7.2.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "sounddevice>=0.5.3",
    "tavily-python>=0.7.19",
    "websockets>=16.0",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "supabase",
]
